--- a/examples/simple_scatter3D.html
+++ b/examples/simple_scatter3D.html
@@ -4,10 +4,10 @@
     <meta http-equiv="X-UA-Compatible" content="chrome=1" />
     <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
     <title>3D Scatter Plot</title>
-    <script type="text/javascript" src="../d3/d3.v3.min.js"></script>
+    <script type="text/javascript" src="../js/d3.v3.min.js"></script>
     <script type="text/javascript" src="../js/x3dom-full.js"></script>
     <script type="text/javascript" src="simple_scatter_3d.js"></script>
-    <link rel="stylesheet" type="text/css" href="../js/x3dom.css"/>
+    <link rel="stylesheet" type="text/css" href="../css/x3dom.css"/>
   </head>
   <body>
     <div id="divPlot"></div>
