--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <div class="container">
          <div class="row">
             <div class="col-md-4 col-md-offset-2">
-               <p>Cell {{ cellID }}</p>
+								<p>Cell {{ cellID }} ({{ cellType }} cell)</p>
                <select ng-model="cellID">
                   <option ng-repeat="cell in cells">{{ $index+1 }}</option>
                </select>
