for some reason data is loading correctly

--- a/index.html
+++ b/index.html
@@ -11,16 +11,16 @@
       <script type="text/javascript" src="bower_components/angular/angular.min.js"></script>
       <script type="text/javascript" src="app/main.js"></script>
       <!-- Stylesheets -->
-      <link type="text/css" rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.min.css"
-      />
+      <link type="text/css" rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.min.css" />
       <link type="text/css" rel="stylesheet" href="app/styles.css" />
    </head>
 
    <body ng-controller="MainCtrl">
       <div class="container">
          <div class="row">
-            <div class="col-md-4 col-md-offset-2">
-								<p>Cell {{ cellID }} ({{ cellType }} cell)</p>
+            <div class="col-md-4">
+								<!-- <p>Cell {{ cellID }} ({{ cellType }} cell)</p> -->
+								<p class="loading" ng-show="isLoading">LOADING</p>
                <select ng-model="cellID">
                   <option ng-repeat="cell in cells">{{ $index+1 }}</option>
                </select>
@@ -30,7 +30,7 @@
             </div>
          </div>
 				 <div class="row">
-						 <div class="col-lg-6 col-md-offset-2">
+						 <div class="col-lg-6">
 								<svg id="scatterPlot"></svg>
 						 </div>
 				 </div>
